testdata/baselines/reference/submodule/conformance/typedefCrossModule4.errors.txt
mod3.js(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== mod3.js (1 errors) ====
    /** @typedef {number} Foo */
    class Bar { }
    module.exports = { Foo: Bar };
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    